@@ -1,1 +1,10 @@
 # TP_Snake
+## Setup of file
+### Download the .zip from the repository
+### Unzip the file
+### Copy and paste the file in your eclipse workspace
+### Run eclipse 
+### Open the file "Snake.java"
+### Run the file
+
+### Note: The JavaFx library must be installed and the file must be run using the vm argument; --module-path "path" --add-modules javafx.controls,javafx.fxml .
